= 0.9.8

* BREAKING CHANGE: changed the arguments to the 'having' method so that it
takes an association name and an options hash. The options hash takes
:join_type and :alias. This will break existing code where the join_type was
passed as the first argument to the method. The alias is a new option that
allows you to alias joins, which lets you join in the same association twice.

* Added a distinct method to force queries to be distinct.

= 0.9.7

* Fix a bug where explicit joins would not honor different aliases if joining
the same class twice.

= 0.9.6

* Build the alias for explicit join tables correctly for multi-word class
names.

* Set params[:readonly] to false by default. Not sure why we need to do that.

* If nil is passed as the argument to a comparison operator, don't fail with a
lack of bind variables, just do what AR does and compare against NULL.

* Add ability to order on columns in tables that were explicitly joined.

= 0.9.5

* Added 'and' and 'or' methods to the DSL::Restriction class so that you can do
things like with(:expired_at).gt(Time.now).or.is_null

= 0.9.4

* Stop forcing order to take a real column name and let it accept a string

* Added an offset method to the DSL so that we can do offsets separately from
limits

* Some small performance improvements

* Added a test to make sure that the IN restriction can take a range

* Changed the default rake task to run db:spec:prepare first

* Added metric_fu for code quality metrics tests

* Refactored a bunch of code to improve the metric numbers

= 0.9.3

* Fix a bug when using class_name on belongs_to associations without
foreign_key

= 0.9.2

* Ruby 1.9 compatability

= 0.9.1

* Change group_by so that it will not throw an exception for missing column
names, since we want to be able to group by arbitrary things.

= 0.9.0 

* Added a github pages page with a quick intro.

* Add tests for working with default scopes.

* de-hackify the default aliases for explicit joins.
